Fix mobile content overflow from code box

--- a/assets/stylesheets/new-stylesheets/pages/_install.scss
+++ b/assets/stylesheets/new-stylesheets/pages/_install.scss
@@ -230,6 +230,11 @@
         word-break: break-word;
       }
     }
+
+    .content-body {
+      flex-grow: 1;
+      width: 100%;
+    }
   }
 
   .content {
@@ -281,10 +286,6 @@
         display: flex;
         flex-direction: column;
         min-height: 200px;
-
-        .content-body {
-          flex-grow: 1;
-        }
       }
     }
   }
